--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<div class="col-lg-4 col-md-5">
 
 						<div itemscope itemtype="http://schema.org/Product">
-							<h2 class="first-title" itemprop="name">Nombre del servicio</h2>
+							<h2 class="first-title" itemprop="name">Bower, a package management</h2>
 							<p itemprop="description">Descripción del servicio o producto del que se hablará. Para qué sirve, los problemas con los que se han encontrado durante el desarrollo y cómo los han solucionado, aparte de las tecnologías usadas.</p>
 							<span itemprop="brand" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="http://company2.com"><span itemprop="name">Derp Labs</span></a></span>
 						</div>
@@ -130,7 +130,8 @@
 						<p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 							C/ Girona, 81-83, Local 6<br>
 							<span class="nowrap" itemprop="addressLocality">Malgrat de Mar</span>,
-							<span itemprop="addressRegion">Barcelona</span>
+							<span itemprop="addressRegion">Barcelona</span><br>
+							<small><a href="https://www.google.es/maps?q=C%2F+Girona,+81-83,+Local+6,+Malgrat+de+Mar&hl=en&sll=41.650264,2.745531&sspn=0.002413,0.004817&hq=C%2F+Girona,+81-83,+Local+6,+Malgrat+de+Mar&radius=15000&t=m&z=13">Ver mapa ampliado</a>
 						</p>
 						<p>La durada aproximada será de dos horas y media.</p>
 
@@ -140,7 +141,7 @@
 			</div>
 		</section>
 
-		<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?ie=UTF8&amp;ll=41.649395,2.746711&amp;spn=0.012987,0.023754&amp;t=m&amp;z=16&amp;output=embed"></iframe>
+		<div id="map_canvas" style="width:100%; height:350px;"></div>
 
 		<section id="participar">
 
@@ -186,7 +187,27 @@
 		<footer id="footer">
 			<div class="container">
 
-				Footer
+				<div class="col-md-6">
+					Créditos, tecnologías usadas
+				</div>
+				<div class="col-md-6" id="newsletter">
+
+					<!-- Begin MailChimp Signup Form -->
+
+					<form action="http://subcultura.us2.list-manage2.com/subscribe/post?u=6a351020e99d6fae9f56ed487&amp;id=ca8f5176d1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<p>Suscríbete a la lista de correo para saber cuándo se celebrará la siguiente edición.</p>
+						<div class="mc-field-group form-group">
+							<input type="email" value="" name="EMAIL" class="form-control input-lg correo" id="mce-EMAIL" placeholder="correo@electronico.com">
+						</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>	<div class="clear"><input type="submit" value="¡Suscríbeme!" name="subscribe" id="mc-embedded-subscribe" class="btn"></div>
+					</form>
+
+					<!--End mc_embed_signup-->
+
+				</div>
 
 			</div>
 		</footer>
@@ -196,6 +217,7 @@
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 		<script src="js/scripts.min.js"></script>
 	</body>
 </html>
